Set min height to fix overflow hidden across browsers

--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -1,5 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  min-height: 0;
 }
 
 .footer {
